<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    tools:context=".ui.fragments.main.order_register.OrderRegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_back"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/btn_back_background"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_order_register"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_back" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_address_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_enter_address_title"
                android:textColor="@color/text_grey"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/edit_text_background"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:text="@string/text_enter_address"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_address_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_dateTime_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_select_date_time_title"
                android:textColor="@color/text_grey"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_address" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_dateTime"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/edit_text_background"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:text="@string/text_select_date_time"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_dateTime_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_patient_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_who_get_analyzes"
                android:textColor="@color/text_grey"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_dateTime" />

            <LinearLayout
                android:id="@+id/linear_patients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/tv_patient_title">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_patients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="6dp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_order_registration_patient" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_one_patient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/spinner_patient"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="6dp"
                        android:background="@drawable/edit_text_background"
                        android:gravity="center_vertical"
                        android:paddingStart="50dp"
                        android:textSize="15sp"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RtlSymmetry" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_sex_orientation"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="14dp"
                        android:src="@drawable/male"
                        app:layout_constraintBottom_toBottomOf="@id/spinner_patient"
                        app:layout_constraintStart_toStartOf="@id/spinner_patient"
                        app:layout_constraintTop_toTopOf="@id/spinner_patient" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_drop_down"
                        app:layout_constraintBottom_toBottomOf="@id/spinner_patient"
                        app:layout_constraintEnd_toEndOf="@id/spinner_patient"
                        app:layout_constraintTop_toTopOf="@id/spinner_patient" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add_new_patient"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/outlined_btn"
                android:outlineAmbientShadowColor="@color/transparent"
                android:outlineSpotShadowColor="@color/transparent"
                android:text="@string/text_add_patient"
                android:textAllCaps="false"
                android:textColor="@color/second_blue"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/linear_patients"
                tools:targetApi="p" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_phone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_enter_phone_title"
                android:textColor="@color/text_grey"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_add_new_patient" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/edit_text_background"
                android:digits="-+0987654321"
                android:gravity="center_vertical"
                android:hint="@string/text_enter_phone"
                android:inputType="phone"
                android:paddingHorizontal="16dp"
                android:singleLine="true"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_phone_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_comment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_enter_comment_title"
                android:textColor="@color/text_grey"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_phone" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_send_voice_message"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="5dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/microphone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_comment_title" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/edit_text_background"
                android:gravity="start|top"
                android:hint="@string/text_enter_comment"
                android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
                android:minHeight="150dp"
                android:paddingHorizontal="16dp"
                android:paddingTop="10dp"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_comment_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/grey_F5"
                android:paddingHorizontal="20dp"
                android:paddingVertical="20dp"
                app:layout_constraintTop_toBottomOf="@id/et_comment">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_pay_with_google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_google_pay"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_to_right"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_pay_with_google"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_pay_with_google" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_promocode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_promocode"
                    android:textColor="@color/text_grey"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_pay_with_google" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_to_right"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_promocode"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_promocode" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_analyzes_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/analyzes_quantity"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_promocode" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_analyzes_sum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/price_rub"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_promocode" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_create_order"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/blocked_btn"
                    android:enabled="false"
                    android:text="@string/text_order"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_analyzes_quantity" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>