<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/bottom_sheet_dialog_background"
    android:padding="20dp"
    tools:context=".ui.fragments.main.order_register.dialogs.FragmentSelectPatientsBottomSheetDialog">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_select_patients"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_close"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/btn_close_background"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear_patients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView12" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_new_patient"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/outlined_btn"
        android:outlineAmbientShadowColor="@color/transparent"
        android:outlineSpotShadowColor="@color/transparent"
        android:text="@string/text_add_patient"
        android:textAllCaps="false"
        android:textColor="@color/second_blue"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/linear_patients"
        tools:targetApi="p" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/filled_btn"
        android:text="@string/text_confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/btn_add_new_patient" />
</androidx.constraintlayout.widget.ConstraintLayout>